ex 5 producer - consumer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,4 @@ add_executable(ex1 fileno.c)
 add_executable(ex2 redirection_sdtout.c)
 add_executable(ex3 copy.c)
 add_executable(ex4 juste_prix.c)
+add_executable(ex5 producer_consumer.c)
