--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,4 @@ add_executable(ex2 redirection_sdtout.c)
 add_executable(ex3 copy.c)
 add_executable(ex4 juste_prix.c)
 add_executable(ex5 producer_consumer.c)
+add_executable(ex6 tube_shell.c)
