--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,4 @@ add_executable(ex3 copy.c)
 add_executable(ex4 juste_prix.c)
 add_executable(ex5 producer_consumer.c)
 add_executable(ex6 tube_shell.c)
+add_executable(ex7 n_tubes_shell.c)
